--- a/package.json
+++ b/package.json
@@ -3,22 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/styled": "^11.3.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
+    "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sqlite3": "^5.0.2",
-    "web-vitals": "^1.0.1"
+    "util": "^0.12.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start:server & npm run start:web",
+    "start:web": "react-scripts start",
+    "start:server": "nodemon server --ignore public",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "seed": "node seed.js"
+    "seed": "node seed.js",
+    "test-server": "mocha",
+    "pretty": "prettier --write \"./**/*.{js,jsx,json}\""
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +45,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.0",
+    "nodemon": "^2.0.12",
+    "npm-run-all": "^4.1.5",
+    "supertest": "^6.1.6"
+  },
+  "proxy": "http://localhost:8080"
 }
