--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "fullstack-web-app",
   "version": "0.1.0",
+  "description": "fullstack web app",
+  "main": "index.js",
+  "author": "Peter Lee",
+  "license": "ISC",
   "private": true,
   "dependencies": {
     "@emotion/styled": "^11.3.0",
@@ -50,7 +54,6 @@
     "chai": "^4.3.4",
     "mocha": "^9.1.0",
     "nodemon": "^2.0.12",
-    "npm-run-all": "^4.1.5",
     "supertest": "^6.1.6"
   },
   "proxy": "http://localhost:8080"
